feat: open api documentation
